crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__whitespace_preservation-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: final_content
snapshot_kind: text
---
    Hi World    
  Test Line  
   Goodbye World
