crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__whitespace_preservation.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">
    Hi World    
  Test Line  
   Goodbye World
</file_content>
